--- a/Studio.html
+++ b/Studio.html
@@ -10,89 +10,89 @@
 <body>
     <header class="header">
 
-        <a class="logo" href="">Web<span class="header-logo-style">Studio</span></a>
+        <a class="logo" href="">Web<span class="thumb">Studio</span></a>
 
         <nav>
             <ul>
-                <li><a class="header-studio" href="">Студія</a></li>
-                <li><a class="header-studio"  href="./Portfolio.html">Портфоліо</a></li> 
-                <li><a class="header-studio"  href="">Контакти</a></li>
+                <li><a class="menu" href="">Студія</a></li>
+                <li><a class="menu"  href="./Portfolio.html">Портфоліо</a></li> 
+                <li><a class="menu"  href="">Контакти</a></li>
             </ul>
         </nav>
         <address>
-        <a class="address-12" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="address-12" href="tell:+380961111111">+38 096 111 11 11</a>
+        <a class="copy" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="copy" href="tell:+380961111111">+38 096 111 11 11</a>
     </address>
     </header> 
 
     <main>
         <!-- Герой -->
-        <section class="section">
-            <h1 class="section-h1">Ефективні рішення для вашого бізнесу</h1>
-            <button class="section-button-1" type="button">Замовити послугу</button>
+        <section class="selectors">
+            <h1 class="title">Ефективні рішення для вашого бізнесу</h1>
+            <button class="button" type="button">Замовити послугу</button>
         </section>
         <!-- lfks -->
         <section>
             <ul>
                 <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p>Ідейні міркування,і навіть початок повсяуденної роботи з формування позиції.</p>
+                    <h3 class="heading">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="subtitle">Ідейні міркування,і навіть початок повсяуденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                    <p>Завдання організації,особливо рамки і місце навчання кадрів тягне усебен.</p>
+                    <h3 class="heading">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="subtitle">Завдання організації,особливо рамки і місце навчання кадрів тягне усебен.</p>
                 </li>
                 <li>
-                    <h3>ПЛАНУВАННЯ</h3>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <h3 class="heading">ПЛАНУВАННЯ</h3>
+                    <p class="subtitle">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p>Значимість цих проблем настільки очевидна,що реалізація планованих завдань.</p>
+                    <h3 class="heading">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="subtitle">Значимість цих проблем настільки очевидна,що реалізація планованих завдань.</p>
                 </li>
             </ul>
         </section>
             
         <section>
-            <h2>Чим ми займаємося</h2>
+            <h2 class="headingg">Чим ми займаємося</h2>
             <ul>
                 <li><img src="./img-2/111.jpg" alt="" width="370"></li>
                 <li><img src="./img-2/222.jpg" alt="" width="370"></li>
                 <li><img src="./img-2/333.jpg" alt="" width="370"></li>
             </ul>
         </section>
-        <section class="section-2">
-            <h2>Наша команда</h2>
+        <section class="buttonn">
+            <h2 class="headingg">Наша команда</h2>
             <ul>
                 <li>
                     <img src="./img-2/1.jpg" alt="" width="270">
-                    <h3>Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="caption">Ігор Дем'яненко</h3>
+                    <p class="subtitlee">Product Designer</p>
                 </li>
                 <li>
                     <img src="./img-2/2.jpg" alt="" width="270">
-                    <h3>Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="caption">Ольга Рєпіна</h3>
+                    <p class="subtitlee">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./img-2/3.jpg" alt="" width="270">
-                    <h3>Микола Тарасов</h3>
-                    <p>Marketing</p>
+                    <h3 class="caption">Микола Тарасов</h3>
+                    <p class="subtitlee">Marketing</p>
                 </li>
                 <li>
                     <img src="./img-2/4.jpg" alt="" width="270">
-                    <h3>Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="caption">Михайло Єрмаков</h3>
+                    <p class="subtitlee">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a class="logo" href="">Web<span class="footer-logo-style">Studio</span></a>
+        <a class="logo" href="">Web<span class="desc">Studio</span></a>
         <address>
             <a class="address" href="https://goo.gl/maps/kNEZdAXZ2F6Kcgue6" target="_blank">м. Київ пр-т Лесі Українки, 26</a>
-            <a class="address-2" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="address-2" href="tell:+380961111111">+38 096 111 11 11</a>
+            <a class="addresss" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="addresss" href="tell:+380961111111">+38 096 111 11 11</a>
         </address>
     </footer>
 </body>
