--- a/Portfolio.html
+++ b/Portfolio.html
@@ -13,7 +13,7 @@
 
         <nav>
             <ul>
-                <li><a class="menu" href="./Studio.html">Студія</a></li>
+                <li><a class="menu" href="./index.html">Студія</a></li>
                 <li><a class="menu" href="">Портфоліо</a></li>
                 <li><a class="menu" href="">Контакти</a></li>
             </ul>
